dark mode fix and emoji

--- a/ShakaFox-Frontend/my-app/src/App.css
+++ b/ShakaFox-Frontend/my-app/src/App.css
@@ -347,6 +347,11 @@ body.dark-mode {
   color: #f0f0f0;
 }
 
+.dark-mode .beach-btn span:nth-child(2) {
+  color: white;
+}
+
+
 .dark-mode .perfect-beach::before {
   background-color: #388e3c;
 }
